[tool.ruff]
# The minimum Python version that should be supported
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "NPY201",
    "W605",  # Check for invalid escape sequences in docstrings (errors in py >= 3.11)
]

ignore = [
    "E721" # Do not compare types, use 'isinstance()'
]

[build-system]
requires = [
    "numpy >= 2.0.0",
    "scipy >= 1.13.0",
    "setuptools >= 68.1.0",
    "wheel",
    "pybind11>=2.10.1",
]


[project]
name = "riskfolio-lib"
version = "0.0.0"
description = "Riskfolio-Lib sandbox"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{ name = "Riskfolio-Lib" }]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "clarabel>=0.6.0",
    "cvxpy>=1.5.2",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.13.5",
    "arch>=7.0",
    "XlsxWriter>=3.1.2",
    "networkx>=3.0",
    "astropy>=5.1",
    "pybind11>=2.10.1",
]
